--- a/2-Footer/style.css
+++ b/2-Footer/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;700&family=Poppins:ital,wght@0,700;1,400&family=Roboto:wght@400;700&display=swap');
 *{
     margin: 0;
+    font-family: 'Inter', sans-serif;
+    line-height: 1.5;
 }
 
 .footer-class{
@@ -12,6 +15,27 @@
 
 .cols{
     width: 30%;
+    text-align: left;
+}
+
+.text-dark{
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+    text-align: justify;
+}
+
+.row-container{
+    padding: 25px;
+}
+
+.lists{
+    list-style: none;
+}
+
+.header-col{
+    text-align: justify;
+    margin-top: 0;
 }
 
 .copyright{
