--- a/3-Home/style.css
+++ b/3-Home/style.css
@@ -33,7 +33,7 @@
     background-color: #03002E;
     color: white;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
     cursor: pointer;
 }
 
@@ -57,7 +57,22 @@
     margin-top: 17%;
 }
 
-#btn-1{
-    background: images\8665445_hotel_service_travel_icon.png no-repeat left center;
-    padding-left: 20px;
+
+
+.white-space h1 {
+    color: black;
 }
+
+@keyframes animate {
+    0% {
+        width: 0px;
+        height: 0px;
+    }
+    30% {
+        width: 50px;
+        height: 0px;
+    }
+    60% {
+        width: 50px;
+        height: 80px;
+    }
