--- a/3-Home/style.css
+++ b/3-Home/style.css
@@ -1,16 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;700&family=Poppins:ital,wght@0,700;1,400&family=Roboto:wght@400;700&display=swap');
+
 *{
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .white-space{
     height: 10%;
     width: 100%;
+    color: #03002E;
+    display: inline-block;
 }
 
 #title{
     margin-left: 12%;
-    margin-top: 2%;
+    margin-top: 2%;      
 }
+
+.typed-out{
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: .15em solid orange;
+    width: 0;
+    animation: 
+    typing 1s steps(20, end) forwards;
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
 
 .horizontal-scroll{
     height: 25%;
@@ -45,7 +64,7 @@
 }
 
 .button__icon{
-    font-size: 4em;
+    font-size: 5em;
 }
 
 .btns:hover{
@@ -59,20 +78,4 @@
 
 
 
-.white-space h1 {
-    color: black;
-}
 
-@keyframes animate {
-    0% {
-        width: 0px;
-        height: 0px;
-    }
-    30% {
-        width: 50px;
-        height: 0px;
-    }
-    60% {
-        width: 50px;
-        height: 80px;
-    }
